Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,17 +36,31 @@
 
 <p>NoScript is a CSS-enabled blocking layer that gives website visitors a nicely formatted message to tell them that they need to enable JavaScript in order to use the website properly.</p>
 
+<p>This is for websites that depends on Js so much that they don't offer lightweight versions that work without JS.</p>
+
 <h1>
-<a name="tested-browsers" class="anchor" href="#tested-browsers"><span class="octicon octicon-link"></span></a>Tested Browsers</h1>
+<a name="supported-browsers" class="anchor" href="#supported-browsers"><span class="octicon octicon-link"></span></a>Supported Browsers</h1>
 
 <ul>
-<li>Google Chrome:                35.0.1916.153 m</li>
-<li>Opera:                        22.0.1471.70</li>
-<li>Safari (Windows only):        5.1.7 </li>
+<li>Google Chrome: 35.0.1916.153 m</li>
+<li>Opera: 22.0.1471.70</li>
+<li>Safari (Windows only): 5.1.7</li>
 </ul><h1>
-<a name="help" class="anchor" href="#help"><span class="octicon octicon-link"></span></a>Help</h1>
+<a name="firefox" class="anchor" href="#firefox"><span class="octicon octicon-link"></span></a>Firefox</h1>
 
-<p>Please help to test and support more browsers.</p>
+<p>Since Firefox 23 had been released, "Enable JavaScript" checkbox was removed from the options. Therefore, ordinary users can't disable JS in FF.</p>
+
+<h1>
+<a name="internet-explorer" class="anchor" href="#internet-explorer"><span class="octicon octicon-link"></span></a>Internet Explorer</h1>
+
+<p>Is not supported right now.</p>
+
+<h1>
+<a name="participate" class="anchor" href="#participate"><span class="octicon octicon-link"></span></a>Participate</h1>
+
+<p>If you are a developer, please feel free to help supporting more browsers.</p>
+
+<p>Also, you can help testing! I tested the browsers I have. If you have older versions, please test them and update the minimum supported versions.</p>
       </section>
     </div>
 
