--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			color: #000;
 		}
 	</style>
-	<link rel="stylesheet" href="noscript.css">
+	<link rel="stylesheet" type="text/css" href="noscript.css">
 </head>
 <body>
 	<div class="wrapper">
@@ -50,25 +50,6 @@
 		
 		<footer>NoScript &copy; 2014</footer>
 	</div>
-	<noscript style="	background-color: #000;
-	color: #FFF;
-	font-size: 31pt;
-
-	min-width: 100%;
-	min-height: 100%;
-
-	display: block;
-	position: fixed;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
-	padding-top: 15%;
-
-	opacity: 0.8;
-
-	text-align: center;
-
-	z-index: 100000;">This website requires JavaScript to function properly.<br>Please enable JavaScript and refresh.</noscript>
+	<noscript>This website requires JavaScript to function properly.<br>Please enable JavaScript and refresh.</noscript>
 </body>
 </html>
