Adding class="noscript" to <noscript>

--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
 		
 		<footer>NoScript &copy; 2014</footer>
 	</div>
-	<noscript>This website requires JavaScript to function properly.<br>Please enable JavaScript and refresh.</noscript>
+	<noscript class="noscript">This website requires JavaScript to function properly.<br>Please enable JavaScript and refresh.</noscript>
 </body>
 </html>
